[gd_scene load_steps=5 format=3 uid="uid://bs7xp25gbyl76"]

[ext_resource type="Script" uid="uid://b6tlurt8ejyd4" path="res://dish.gd" id="1_tj3o5"]
[ext_resource type="Texture2D" uid="uid://50s7kgppntup" path="res://assets/cloche.png" id="2_53w8m"]
[ext_resource type="Texture2D" uid="uid://d4n4ck6bvbqd6" path="res://assets/rolling_counter_numbers.png" id="3_53w8m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_53w8m"]
size = Vector2(40, 40)

[node name="dish" type="Node2D"]
scale = Vector2(0.33, 0.33)
script = ExtResource("1_tj3o5")

[node name="cloche" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_53w8m")

[node name="number" type="Sprite2D" parent="."]
position = Vector2(23, -25)
rotation = 0.226893
texture = ExtResource("3_53w8m")
hframes = 10

[node name="Button" type="Button" parent="."]
offset_left = -32.0
offset_top = -34.0
offset_right = 32.0
offset_bottom = 30.0
disabled = true
text = "DISH"

[node name="InteractPos" type="Node2D" parent="."]
position = Vector2(0, 200)

[node name="Area2D" type="Area2D" parent="InteractPos"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractPos/Area2D"]
shape = SubResource("RectangleShape2D_53w8m")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="body_entered" from="InteractPos/Area2D" to="." method="_on_area_2d_body_entered"]
